--- a/assets/css/_fonts.styl
+++ b/assets/css/_fonts.styl
@@ -1,2 +1,3 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700)
 @import url(http://fonts.googleapis.com/css?family=Open\+Sans:400,700)
+@import url(http://fonts.googleapis.com/css?family=Anonymous\+Pro)
