--- a/assets/css/_variables.styl
+++ b/assets/css/_variables.styl
@@ -1,7 +1,7 @@
 xl-snap = 1200px
 large-snap = 980px
 med-snap = 768px
-small-snap = 480px
+small-snap = 635px
 
 white = #fff
 light-grey = #fdfdfd
@@ -15,6 +15,7 @@ orange = #fc6e51
 dark-orange = #db5138
 light-blue = #86edfa
 pink = #ff6678
+blue = #6AD1DD
 
 section-padding-block = 142px
 xl-padding-block = 90px
@@ -24,16 +25,16 @@ small-padding-block = 20px
 xs-padding-block = 12px
 tiny-padding-block = 8px
 
-headline-font = 52px
-xl-font = 38px
-large-font = 22px
-med-font = 16px
-small-font = 14px
-tiny-font = 10px
+headline-font = 3.25rem
+xl-font = 2.375rem
+large-font = 1.375rem
+med-font = 1rem
+small-font = .875rem
+tiny-font = .625rem
 
 open-sans = 'Open Sans', Helvetica, Helvetica, Arial, sans-serif
 montserrat = 'Montserrat', Helvetica, Arial, sans-serif
-code-font = Consolas, Monaco, 'Andale Mono', monospace
+code-font = 'Anonymous Pro', Consolas, monospace
 
 font-stack = open-sans
 font-size = 14
