--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -9,6 +9,7 @@ base()
 @import '_fonts'
 @import '_base'
 @import '_nav'
+@import '_mobileMenu'
 @import '_api'
 @import '_hero'
 @import '_github-band'
@@ -19,3 +20,4 @@ base()
 @import '_featured-articles'
 @import '_share'
 @import '_footer'
+@import '_updateBrowser'
