--- a/views/_api.jade
+++ b/views/_api.jade
@@ -1,10 +1,10 @@
 .close-api.toggle-api
 .pushy.pushy-left
-  .api
+  .api(data-scroll-index='8')
     :markdown
-      Interactive API.
-      ================
-      A sub head. Lorem ipsum dolor sit amet.
+      Jeet's API.
+      =======================
+      A sub head about Eli's coolness.
       ---------------------------------------
 
       ### column ###
