--- a/views/_comparison.jade
+++ b/views/_comparison.jade
@@ -3,7 +3,7 @@
     h2 Jeet is better than your weak-ass grid.
   .contained.scrollReveal.comparison-animation
     .comparatives.fourth.span-example
-      .blank-box.bigger.cell
+      .blank-box.bigger-cell.cell
       .comparative.darker.cell
         p Easy to use
       .comparative.cell
@@ -11,17 +11,17 @@
       .comparative.darker.cell
         p Actual columns
     .bootstrap.fourth.span-example
-      .bootstrap-grid.bigger.cell
+      .bootstrap-grid.bigger-cell.cell
       .check.darker.cell
       .x.cell
       .x.darker.cell
     .foundation.fourth.span-example
-      .foundation-grid.bigger.cell
+      .foundation-grid.bigger-cell.cell
       .check.darker.cell
       .x.cell
       .x.darker.cell
     .jeet.fourth.span-example
-      .jeet-logo.bigger.cell
+      .jeet-logo.bigger-cell.cell
       .check.darker.cell
       .check.cell
       .check.darker.cell
