--- a/views/_installation.jade
+++ b/views/_installation.jade
@@ -1,6 +1,6 @@
 .installation.grid-container(data-scroll-index='3') 
   .contained
-    h1.text-center.scrollReveal.fade-in Getting started is easy as hell.
+    h1.text-center.scrollReveal.fade-in Getting started is easy.
     h2.text-center.scrollReveal.fade-in Something about two options lorem ipsum dolor sit amet.
     .half.scss.stack-example.scrollReveal.slide-in-first
       h3 SCSS Installation
