--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -1,10 +1,14 @@
 .api
   padding small-padding-block
   padding-top xl-padding-block - 7
+  +below(small-snap)
+    padding (med-padding-block - 7) 4% small-padding-block 4%
   h1, h2, h3, p
     color white
   h3
     margin (large-padding-block - 10) 0 (small-padding-block * -0.5) 0
+    +below(small-snap)
+      margin-top small-padding-block - 10
   em code
     color green
     font-size small-font
@@ -17,6 +21,8 @@
   display inline-block
   &:hover
     color #444
+.touch .view-example
+  display none
 .pushy
   pos(fixed, 0, false, false, false)
   size(30%, 100%)
@@ -27,6 +33,11 @@
   -webkit-overflow-scrolling touch
 .pushy-left
   transform translate3d(-100%,0,0)
+.touch .pushy-left
+  transition none
+  transform none
+  width 100%
+  position static
 .pushy-open
   transform translate3d(0,0,0)
 .pushy, .push
@@ -34,6 +45,7 @@
   -webkit-perspective 1000
 #demo-container
   width 100%
+  overflow hidden
   transition width .2s quick-slide-animation, margin-left .2s quick-slide-animation
   &.container-push
     width 70%
@@ -57,7 +69,7 @@
     pos(absolute, 0, false, false, 0)
     size(101%, 100%)
     box-sizing border-box
-    content 'column(1/3 5/6)'
+    content 'column(1/3)'
     font-family code-font
     font-size med-font
     text-align center
