--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -7,6 +7,11 @@ vendors = webkit moz o ms official
 pie-enabled = true
 pie-path = '/pie.htc'
 
+html
+  font-size 16px
+  +below(med-snap)
+    font-size 14px
+
 body, div, header, footer, h1, h2, h3, p, ul, ol, li, code, a, span
   margin 0
   padding 0
@@ -18,12 +23,17 @@ h1
   font-family montserrat
   font-weight normal
   letter-spacing -0.04em
+  +below(small-snap)
+    font-weight bold
+    font-size 2rem
 h2
   font-size large-font
   font-family open-sans
   font-weight normal
   margin-top small-padding-block - 21
   letter-spacing -0.04em
+  +below(small-snap)
+    font-size 1.2rem
 h3
   font-size med-font
   font-family montserrat
@@ -32,8 +42,12 @@ h3
   text-transform uppercase
 p
   font-size med-font
+  +below(small-snap)
+    padding-left 8%
+    padding-right 8%
 code
   font-family code-font
+  font-size med-font
   &.inline
     background dark-orange
     padding 5px
@@ -41,7 +55,7 @@ code
   &.to-copy
     display inline-block
     margin-bottom -10px
-    padding 9px 0 7px 10px
+    padding 9px 0 8px 10px
     border-bottom-right-radius 0
     border-top-right-radius 0
     white-space nowrap
@@ -97,16 +111,24 @@ strong
     float none
     &:last-child
       margin-right auto
+  +below(med-snap)
+    column(11/12, offset: 1/24)
 .half
   column(1/2 5/6, gutter: 10)
-  &.no-gutter
-    column(1/2 5/6)    
+.half-no-gutter
+  column(1/2 5/6)    
 .third
   column(1/3 5/6)
+  +below(small-snap)
+    column(1)
   &.tight
     column(1/3 5/6, gutter: 1)
+    +below(small-snap)
+      column(1)
 .fourth
   span(1/4 5/6)
+  +below(small-snap)
+    span(1/2 5/6)
 
 .without-border
   border none
@@ -157,3 +179,5 @@ strong
         border-right 1px solid white
     .tutorial
       background-color rgba(green, 0.3)
+.touch .scrollReveal
+  opacity 1
