--- a/assets/css/_featured-articles.styl
+++ b/assets/css/_featured-articles.styl
@@ -1,6 +1,7 @@
 .featured-articles
   margin-top ((large-padding-block - xl-padding-block) - (large-padding-block / 2))
   padding-bottom ((xl-padding-block - 5) - (large-padding-block / 2))
+  hideAt(small-snap)
   .half
     column(1/2 5/6, gutter: 4)
     margin-top ((large-padding-block / 2) - xs-padding-block)
@@ -25,14 +26,14 @@
     &.unshift-view:before
       content 'unshift()'
 .smashing-magazine
-  retina-background-image('../img/smashing-magazine-logo')
+  background url('../img/smashing-magazine-logo.svg') no-repeat
   background-size 187px 49px
   +below(large-snap)
     shift(1/2)
   +below(med-snap)
     unshift()
 .css-tricks
-  retina-background-image('../img/css-tricks-logo')
+  background url('../img/css-tricks-logo.svg') no-repeat
   background-size 200px 40px
   +below(large-snap)
     shift(-1/2)
