--- a/assets/css/_share.styl
+++ b/assets/css/_share.styl
@@ -4,6 +4,11 @@
   text-align center
   background grey
   padding (xl-padding-block - 17) 0
+  +below(small-snap)
+    padding (med-padding-block - 17) 0
+  h1
+    +below(small-snap)
+      font-size 1.8rem
   .contained
     column(5/6, offset: 1/12)
     +above(xl-snap)
@@ -17,24 +22,31 @@
       line-height 175px
 .centered
   center(420px)
-.mt-share-inline-circle
+.share-inline-circle
   size(80px)
   display inline-block
   margin-top med-padding-block - 6
   border-radius 50%
+  +below(small-snap)
+    size(50px)
+    margin-top small-padding-block - 6
   img
-    size(80px)
+    size(30px)
     border 0px
-.mt-google
+    padding-top small-padding-block + 5
+    +below(small-snap)
+      size(small-padding-block)
+      padding-top small-padding-block - 5
+.google
   background-color rgb(221, 75, 57)
   &:hover
     background-color rgb(225, 95, 79)
-.mt-twitter
+.twitter
   margin 0 20px
   background-color rgb(0, 172, 238)
   &:hover
     background-color rgb(8, 187, 255)
-.mt-facebook
+.facebook
   background-color rgb(59, 89, 152)
   &:hover
     background-color rgb(66, 100, 170)
