--- a/views/_features.jade
+++ b/views/_features.jade
@@ -5,7 +5,7 @@
       h2.scrollReveal.fade-in A sub head. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     .contained.edit-example
       .third.flexibility.column-example
-        .features-img.flexibility-img.scrollReveal.
+        .features-img.flexibility-img.scrollReveal
         h3.scrollReveal.fade-in Flexibility
         p.scrollReveal.fade-in
           | Jeet is built on CSS preprocessors. It's capable of doing a lot of programatic calculations that CSS can't. As such, you're no longer limited to classes like 
@@ -13,13 +13,13 @@
           | . Instead, you can pass
           span.italic  any
           |  fraction, decimal, or combination of the two, to create a completely custom grid.
-      .third.speed
+      .third.speed.column-example
         .features-img.speed-img.scrollReveal.flip-staggered-second
         h3.scrollReveal.fadeInUp-staggered-second Speed
         p.scrollReveal.fadeInUp-staggered-second Jeet is famous for being the fastest grid system in the world. It's easy to read, terse, syntax (e.g. 
           code col(1/3)
           | ) allows you to craft a completely custom structure to your site literally in minutes.
-      .third.integration
+      .third.integration.column-example
         .features-img.integration-img.scrollReveal.flip-staggered-third
         h3.scrollReveal.fadeInUp-staggered-third Integration
         p.scrollReveal.fadeInUp-staggered-third Jeet can work in any environment's pipeline whether it be a static site in SCSS, a Node package in Stylus, or as a Rails application. Anywhere Stylus or SCSS work, Jeet will work.
