--- a/views/_github-band.jade
+++ b/views/_github-band.jade
@@ -1,9 +1,10 @@
 .github-band
   .contained.scrollReveal
-    p.last-updated.white.half.no-gutter
+    p.last-updated.white.half-no-gutter
       |Last updated on Github 
       a.white.latest-commit-link(href='#') March 13, 2014
-    .hero-ctas.half.no-gutter
-      a.btn.view-api.toggle-api(href='#') View API
-      a.btn.without-border(href='https://github.com/mojotech/jeet') Contribute on Github
+    .hero-ctas.half-no-gutter
+      .right-half-wrap
+        a.btn.view-api.toggle-api(data-scroll-goto='8') View API
+        a.btn.without-border(href='https://github.com/mojotech/jeet') Contribute on Github
   include _nav-light-green
