include zeroClipboard for code copying

--- a/assets/css/_installation.styl
+++ b/assets/css/_installation.styl
@@ -46,7 +46,7 @@
       top small-padding-block * -1
   .copy-btn
     background orange
-    &:hover
+    &:hover, &.zeroclipboard-is-hover
       background white
       color orange
     +below(xl-snap)
