--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,5 +31,6 @@ html
   script(src='js/stickyNav.js')
   script(src='js/interactiveAPI.js')
   script(src='js/animateScroll.js')
+  script(src="js/zeroClipboard.min.js")
   script(src="js/updateBrowser.js")
   script(src="js/main.js")
