fix mobile nav bugs

--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -7,6 +7,7 @@
   margin-left small-padding-block
   hideAt(small-snap)
   +below(med-snap)
+    display none
     transition top 500ms ease-out
   &.default
     pos(fixed, (small-padding-block / 2), false, false, 0)
