fix installation code copying bugs

--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -54,7 +54,7 @@ code
     border-radius 2px
   &.to-copy
     display inline-block
-    margin-bottom -10px
+    margin-bottom -13px
     padding 9px 0 8px 10px
     border-bottom-right-radius 0
     border-top-right-radius 0
@@ -98,9 +98,8 @@ strong
   border-top-left-radius 0
   right 0
   padding 8px 20px
-  &:active
-    position absolute
-    bottom -6px
+  &:active, &.zeroclipboard-is-active
+    margin-top 2px
 
 .contained
   column(4/6, offset: 1/6)
