make text clearer

--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -17,6 +17,8 @@ body, div, header, footer, h1, h2, h3, p, ul, ol, li, code, a, span
   padding 0
   font-family open-sans
   color dark-grey
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
 
 h1
   font-size xl-font
