fix relative paths

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html
   body.landing-page
     block content
 
-  script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+  script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
   script(src='js/vendor/custom-modernizr.js')
   script(src='js/vendor/pushy.js')
   script(src='js/vendor/scrollIt.js')
