--- a/tests/fixtures/stylus/css/span-offset.css
+++ b/tests/fixtures/stylus/css/span-offset.css
@@ -1,19 +1,5 @@
-.spanned-column,
-.spanned-column:nth-child(2) {
-  *zoom: 1;
-}
-.spanned-column:before,
-.spanned-column:nth-child(2):before,
-.spanned-column:after,
-.spanned-column:nth-child(2):after {
-  content: '';
-  display: table;
-}
-.spanned-column:after,
-.spanned-column:nth-child(2):after {
-  clear: both;
-}
 .spanned-column {
+  *zoom: 1;
   float: left;
   display: inline;
   clear: none;
@@ -24,7 +10,16 @@
   margin-left: 0%;
   margin-right: 0%;
 }
+.spanned-column:before,
+.spanned-column:after {
+  content: '';
+  display: table;
+}
+.spanned-column:after {
+  clear: both;
+}
 .spanned-column:nth-child(2) {
+  *zoom: 1;
   float: left;
   display: inline;
   clear: none;
@@ -34,4 +29,12 @@
   width: 25%;
   margin-left: 25%;
   margin-right: 0%;
+}
+.spanned-column:nth-child(2):before,
+.spanned-column:nth-child(2):after {
+  content: '';
+  display: table;
+}
+.spanned-column:nth-child(2):after {
+  clear: both;
 }
