narrow click area for grid toggle

--- a/assets/css/_hero.styl
+++ b/assets/css/_hero.styl
@@ -23,6 +23,7 @@
   display none
 .grid-toggle
   center()
+  display inline-block
   clear both
   padding-top large-padding-block - 8
   text-decoration none
