--- a/assets/css/_resources.styl
+++ b/assets/css/_resources.styl
@@ -1,5 +1,5 @@
 .resources
-  padding (xl-padding-block - 17) 0
+  padding (xl-padding-block - 17) 0 (xl-padding-block - 31) 0
   +below(small-snap)
     padding (tiny-padding-block + med-padding-block - 17) 0 (xs-padding-block + med-padding-block - 17) 0
   h3
