update clear fix documentation

--- a/views/_api.jade
+++ b/views/_api.jade
@@ -89,6 +89,7 @@
     a.btn.view-example(data-scroll-goto='7', data-example='align-example') View an example
 
     :markdown
-      ### $cf ###
+      ### cf ###
+      *`()`*
       
-      The clearfix placeholder saves space on repetitive use of clearfix. Use clearfix anywhere like so: `@extend $cf`
+      The clearfix placeholder saves space on repetitive use of clearfix. Use clearfix anywhere like so: `cf()`
