fix padding for center example (share partial)

--- a/assets/css/_share.styl
+++ b/assets/css/_share.styl
@@ -16,7 +16,7 @@
       max-width 100%
       margin-left auto
   .focused-example
-    padding-top xl-padding-block
+    padding-top med-padding-block
     &:before
       content 'center(420px)'
       line-height 175px
