add pointer on hover for mobile menu

--- a/assets/css/_mobileMenu.styl
+++ b/assets/css/_mobileMenu.styl
@@ -68,6 +68,7 @@
   display block
   text-align left
   border-top 1px solid green
+  cursor pointer
   &:last-child
     border-bottom 1px solid green
   svg
