include fast click for quicker mobile experience

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,7 @@ html
   script(src='js/vendor/pushy.js')
   script(src='js/vendor/scrollIt.js')
   script(src='js/vendor/jquery.slicknav.min.js')
+  script(src="js/fastclick.js")
   script(src='js/vendor/matchHeight.js')
   script(src='js/vendor/fancybox.js')
   script(src='js/stickyNav.js')
