make logo scroll to top on mobile

--- a/assets/css/_mobileMenu.styl
+++ b/assets/css/_mobileMenu.styl
@@ -95,3 +95,14 @@
         fill dark-green
   .logo-icon
     position
+.mobile-scrollTo-top
+  display none
+  size(140px, 57px)
+  position fixed
+  top 0
+  z-index 100
+  cursor pointer
+  +below(med-snap)
+    display block
+.touch .mobile-scrollTo-top
+  display block
