--- a/views/_nav-default.jade
+++ b/views/_nav-default.jade
@@ -1,4 +1,5 @@
 nav
+  a.mobile-scrollTo-top(data-scroll-nav="0")
   .side-nav.default
     a.side-nav-link.scroll-top.logo(data-scroll-nav='0')
   ul#menu.mobile-nav
