update clearfix copy in api

--- a/views/_api.jade
+++ b/views/_api.jade
@@ -92,4 +92,4 @@
       ### cf ###
       *`()`*
       
-      The clearfix placeholder saves space on repetitive use of clearfix. Use clearfix anywhere like so: `cf()`
+      Nicholas Gallagher's clearfix. Use this to wrap any set of `column()`s or `spans`.
