add huge snap point

--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -106,7 +106,7 @@ strong
 .contained
   column(4/6, offset: 1/6)
   max-width 1200px
-  +above(xl-snap)
+  +above(huge-snap)
     display table
     margin auto
     float none
