--- a/assets/css/_comparison.styl
+++ b/assets/css/_comparison.styl
@@ -35,7 +35,7 @@
   background-size 144px 19px
 .bigger-cell
   height xl-padding-block
-  +below(xl-snap)
+  +below(huge-snap)
     background-size 80%
 .pushy-active .bigger-cell
   +below(1400px)
