--- a/assets/css/_footer.styl
+++ b/assets/css/_footer.styl
@@ -18,7 +18,7 @@
       content 'align(both)'
   .contained
     column(5/6, offset: 1/12)
-    +above(xl-snap)
+    +above(huge-snap)
       width 100%
       max-width 100%
       margin-left auto
@@ -27,7 +27,7 @@
   float right
   font-size tiny-font
   opacity 0.5
-  +above(xl-snap)
+  +above(huge-snap)
     margin-right 2.145833333333333%
   +below(med-snap)
     float none
