--- a/assets/css/_installation.styl
+++ b/assets/css/_installation.styl
@@ -63,7 +63,7 @@
   font-size tiny-font
   font-weight bold
   margin (large-padding-block + 6) 0 0 (small-padding-block + 2)
-  +below(xl-snap)
+  +below(huge-snap)
     width 100%
   +below(med-snap)
     margin small-padding-block auto auto auto
