--- a/assets/css/_share.styl
+++ b/assets/css/_share.styl
@@ -11,7 +11,7 @@
       font-size 1.8rem
   .contained
     column(5/6, offset: 1/12)
-    +above(xl-snap)
+    +above(huge-snap)
       width 100%
       max-width 100%
       margin-left auto
