--- a/assets/css/_github-band.styl
+++ b/assets/css/_github-band.styl
@@ -34,5 +34,10 @@
       color white
 .pushy-active .btn.without-border
   opacity 0
-.view-api-btn
-  border 2px solid white
+.view-api.toggle-api
+  +below(xl-snap)
+    display none
+.scrollTo-api
+  display none
+  +below(xl-snap)
+    display block
