--- a/views/_github-band.jade
+++ b/views/_github-band.jade
@@ -5,6 +5,7 @@
       a.white.latest-commit-link(href='#') March 13, 2014
     .hero-ctas.half-no-gutter
       .right-half-wrap
-        a.btn.view-api.toggle-api(data-scroll-goto='8') View API
+        a.btn.view-api.toggle-api View API
+        a.btn.view-api.scrollTo-api(data-scroll-goto='8') View API
         a.btn.without-border(href='https://github.com/mojotech/jeet') Contribute on Github
   include _nav-light-green
