--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ block content
     <p>Your browser is unsupported. Please <a href="http://browsehappy.com/">upgrade</a> for the best experience.
     </div>
     <![endif]
+  include _api-interactive
   #demo-container
     include _nav-default
     include _hero
@@ -17,7 +18,8 @@ block content
     .desktop-footer
       include _share
       include _footer
-  include _api
+  .static.api(data-scroll-index='8')
+    include _api-markdown
   .mobile-footer
     include _share
     include _footer
