fix mobile menu for iphone horizontal

--- a/assets/css/_mobileMenu.styl
+++ b/assets/css/_mobileMenu.styl
@@ -87,7 +87,7 @@
     text-indent 30%
     text-decoration none
     background dark-green
-    padding (med-padding-block - 1) 5%
+    padding (small-padding-block - 3) 5%
     margin 0
     &:hover
       background green
