remove flashing on touch devices when button is pressed

--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -19,7 +19,7 @@ body, div, header, footer, h1, h2, h3, p, ul, ol, li, code, a, span
   color dark-grey
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
-
+  -webkit-tap-highlight-color rgba(0,0,0,0)
 h1
   font-size xl-font
   font-family montserrat
