make mobile nav appear on desktop for tablet/mobile viewports

--- a/assets/css/_mobileMenu.styl
+++ b/assets/css/_mobileMenu.styl
@@ -11,7 +11,7 @@
   background dark-green url('../img/jeet-logo-white.svg') no-repeat small-padding-block (xs-padding-block - 3)
   background-size 86px 36px
   transition background-position .2s quick-slide-animation
-  +below(med-snap)
+  +below(xl-snap)
     display block
   &:before, &:after
     content " "
@@ -102,7 +102,7 @@
   top 0
   z-index 100
   cursor pointer
-  +below(med-snap)
+  +below(xl-snap)
     display block
 .touch .mobile-scrollTo-top
   display block
