--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -5,10 +5,7 @@
   pos(absolute, (small-padding-block - (med-padding-block / 2)), false, false, 0)
   min-width 86px
   margin-left small-padding-block
-  hideAt(small-snap)
-  +below(med-snap)
-    display none
-    transition top 500ms ease-out
+  hideAt(xl-snap)
   &.default
     pos(fixed, (small-padding-block / 2), false, false, 0)
     visibility hidden
