fix api stack snap point

--- a/assets/css/_footer.styl
+++ b/assets/css/_footer.styl
@@ -53,11 +53,11 @@
   display none
 .desktop-footer
   display block
-  +below(med-snap)
+  +below(xl-snap)
     display none
 .touch .mobile-footer
   display block
 .mobile-footer
   display none
-  +below(med-snap)
+  +below(xl-snap)
     display block
