final tweaks before soft launch

--- a/assets/css/_installation.styl
+++ b/assets/css/_installation.styl
@@ -84,6 +84,6 @@
     margin-top tiny-padding-block * -1
     top small-padding-block * -1
   .copy-btn
-    margin-top tiny-padding-block * -1
+    margin-top (tiny-padding-block - 2) * -1
   .usage
     width 100%
