--- a/assets/css/_resources.styl
+++ b/assets/css/_resources.styl
@@ -20,6 +20,18 @@
 .getting-started
   +below(small-snap)
     margin-top small-padding-block + tiny-padding-block - 4
+  +above(huge-snap)
+    shift(1/3, gutter:1)
+.focused-example
+  &.third.tight
+    padding (small-padding-block + 4) 0 (xs-padding-block - 2) 0
+  &.getting-started:before
+    content 'shift(1/2)'
+  &.basic-use:before
+    content 'shift(-1/2)'
+.basic-use
+  +above(huge-snap)
+    shift(-1/3, gutter:1)
 .tutorial
   size(100%, 200px)
   display block
