--- a/views/_resources.jade
+++ b/views/_resources.jade
@@ -3,11 +3,11 @@
     h1.text-center.scrollReveal.fade-in Learn by example.
     h2.text-center.scrollReveal.fade-in We walk you through Jeet in short, disgestible, screencasts.
   .contained
-    .third.tight.video.getting-started.scrollReveal
+    .third.tight.video.getting-started.shift-example.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #1 Name
-    .third.tight.video.basic-use.scrollReveal.flip-staggered-second
+    .third.tight.video.basic-use.scrollReveal.shift-example.flip-staggered-second
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
         h3 Video #2 Name
