--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -1,6 +1,5 @@
 .api
-  padding small-padding-block
-  padding-top xl-padding-block - 7
+  padding xs-padding-block small-padding-block (tiny-padding-block - 3) small-padding-block
   +below(xl-snap)
     padding (xl-padding-block - 7) 4% (xl-padding-block - 14) 4%
   h1, h2, h3, p
