shorten section padding on tablet/mobile

--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -1,7 +1,7 @@
 .api
   padding xs-padding-block small-padding-block (tiny-padding-block - 3) small-padding-block
   +below(xl-snap)
-    padding (xl-padding-block - 7) 4% (xl-padding-block - 14) 4%
+    padding (med-padding-block - tiny-padding-block) 4% (med-padding-block - 15) 4%
   h1, h2, h3, p
     color white
   h3
