--- a/assets/css/_comparison.styl
+++ b/assets/css/_comparison.styl
@@ -1,5 +1,5 @@
 .comparison
-  padding 0 0 xl-padding-block 0
+  padding (xl-padding-block - 17) 0 xl-padding-block 0
   hideAt(small-snap)
   .focused-example
     &.comparatives, &.bootstrap, &.foundation
