--- a/assets/css/_features.styl
+++ b/assets/css/_features.styl
@@ -1,7 +1,7 @@
 .features
-  padding (xl-padding-block - 17) 0
+  padding-top xl-padding-block - 17
   +below(small-snap)
-    padding ( large-padding-block - 17) 0
+    padding (large-padding-block - 17) 0
   &.focused-parent.edit-view .edit-example
     edit()
     margin-top med-padding-block
