minor aesthetic adjustments for staging

--- a/assets/css/_base.styl
+++ b/assets/css/_base.styl
@@ -112,7 +112,7 @@ strong
     float none
     &:last-child
       margin-right auto
-  +below(med-snap)
+  +below(xl-snap)
     column(11/12, offset: 1/24)
 .half
   column(1/2 5/6, gutter: 10)
