--- a/views/_comparison.jade
+++ b/views/_comparison.jade
@@ -1,6 +1,6 @@
 .comparison.text-center.grid-container(data-scroll-index='2')
   .contained.scrollReveal.fade-in
-    h2 Jeet is better than your weak-ass grid.
+    h2 Jeet's great!
   .contained.scrollReveal.comparison-animation
     .comparatives.fourth.span-example
       .blank-box.bigger-cell.cell
