modify stack example for tablet display

--- a/assets/css/_installation.styl
+++ b/assets/css/_installation.styl
@@ -17,7 +17,9 @@
     overflow hidden
     height auto
     margin-top large-padding-block - 9
-    +below(large-snap)
+    +between(xl-snap, huge-snap)
+      stack()
+    +below(med-snap)
       stack()
     +below(small-snap)
       margin-top med-padding-block - 9
