Add last commit message/link

--- a/views/_github-band.jade
+++ b/views/_github-band.jade
@@ -1,8 +1,8 @@
 .github-band
   .contained.scrollReveal
     p.last-updated.white.half-no-gutter
-      |Last updated on Github 
-      a.white.latest-commit-link(href='#') March 13, 2014
+      | Latest Github Commit:&nbsp;
+      a.white.latest-commit-link(href='http://github.com/mojotech/jeet' target="_blank") Jeet
     .hero-ctas.half-no-gutter
       .right-half-wrap
         a.btn.view-api.toggle-api View API
